Add every routes of the template
Remove "soulmate" from single.ejs

--- a/views/single.ejs
+++ b/views/single.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Soulmate | Single</title>
+    <title>Matcha | Single</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -17,7 +17,7 @@
         </div>
         <div class="logo">
             <a href="/"><img src="/assets/images/logo.png" alt=""/>
-                <span>Soulmate</span>
+                <span>Matcha</span>
             </a>
         </div>
         <div class="header_right">
