--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,10 +15,10 @@
 <div class="header">
     <div class='container'>
         <div class="header_left">
-            <img src="images/rate.png" alt=""/>
+            <img src="/assets/images/rate.png" alt=""/>
         </div>
         <div class="logo">
-            <a href="/"><img src="images/logo.png" alt=""/>
+            <a href="/"><img src="/assets/images/logo.png" alt=""/>
                 <span>Matcha</span>
             </a>
         </div>
@@ -66,7 +66,6 @@
                     <a class="forgot" href="#">Forgot Your Password?</a>
                     <input id="loginButton" type="submit" value="Login">
                 </form>
-
             </div>
             <div class="clearfix"></div>
         </div>
