--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -41,23 +41,30 @@
 
 <div class="container bootstrap snippet">
     <div class="row">
-        <div class="col-sm-10"><h1>User name</h1></div>
+        <div class="col-sm-10"><h1><%=[locals.first_name +" "+ locals.last_name]%></h1></div>
     </div>
     <div class="row">
         <div class="col-sm-3"><!--left col-->
-
-
             <div class="text-center">
-                <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
-                     alt="avatar">
+                <img src="<%= typeof file != 'undefined' ? file : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png"%>" class="avatar img-circle img-thumbnail" alt="avatar">
                 <h6>Upload a different photo...</h6>
-                <input type="file" class="text-center center-block file-upload">
+                <%= typeof msg != 'undefined' ? msg : ''%>
+                <form action="/upload" method="post" enctype="multipart/form-data">
+                    <div class="file-field input-field">
+                        <div class="input-group mb-3">
+                            <div class="custom-file">
+                                <input name="upload" type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                            </div>
+                        </div>
+                    </div>
+                    <button name="sub_upload" class="btn btn-primary" type="submit" value="submit">Submit</button>
+                </form>
             </div>
             </hr><br>
 
             <ul class="list-group">
                 <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong>Shares</strong></span> 125</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong>Score</strong></span> 125</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong>Likes</strong></span> 13</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong>Posts</strong></span> 37</li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong>Followers</strong></span> 78</li>
@@ -75,9 +82,48 @@
             <div class="tab-content">
                 <div class="tab-pane active" id="home">
                     <hr>
-                    contenue relatif a la personne
-                    <hr>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label><h4><%= locals.first_name + " " + locals.last_name%></h4></label>
+                        </div>
+                    </div>
 
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label><h4><%=locals.username%></h4></label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label><h4>Sex</h4></label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label><h4>Age</h4></label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label><h4>Sexual orientation</h4></label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label><h4>Bio</h4></label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label><h4>tags</h4></label>
+                        </div>
+                    </div>
+                    <hr>
                 </div><!--/tab-pane-->
                 <div class="tab-pane" id="messages">
 
@@ -222,6 +268,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" language="JavaScript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" language="JavaScript"></script>
 <script src="/assets/js/profil.js" language="JavaScript"></script>
+<script src="/assets/js/parametre.js" language="JavaScript"></script>
 
 </body>
 </html>
