--- a/views/register.ejs
+++ b/views/register.ejs
@@ -48,6 +48,14 @@
                 <div class="register-top-grid">
                     <h3>PERSONAL INFORMATION</h3>
                     <div>
+                        <span>First_name<label>*</label></span>
+                        <input id="sign_up_first" type="text">
+                    </div>
+                    <div>
+                        <span>Last_name<label>*</label></span>
+                        <input id="sign_up_last" type="text">
+                    </div>
+                    <div>
                         <span>Email Address<label>*</label></span>
                         <input id="sign_up_email" type="text">
                     </div>
@@ -55,14 +63,6 @@
                         <span>Username<label>*</label></span>
                         <input id="sign_up_user" type="text">
                     </div>
-                    <div class="clearfix"></div>
-                    <a class="news-letter" href="#">
-                        <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i> </i>Sign Up for
-                                                                                                          Newsletter</label>
-                    </a>
-                </div>
-                <div class="register-bottom-grid">
-                    <h3>LOGIN INFORMATION</h3>
                     <div>
                         <span>Password<label>*</label></span>
                         <input id="sign_up_password" type="password">
