--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,10 +15,10 @@
 <div class="header">
     <div class='container'>
         <div class="header_left">
-            <img src="images/rate.png" alt=""/>
+            <img src="/assets/images/rate.png" alt=""/>
         </div>
         <div class="logo">
-            <a href="/"><img src="images/logo.png" alt=""/>
+            <a href="/"><img src="/assets/images/logo.png" alt=""/>
                 <span>Matcha</span>
             </a>
         </div>
