--- a/views/register.ejs
+++ b/views/register.ejs
@@ -48,28 +48,28 @@
                 <div class="register-top-grid">
                     <h3>PERSONAL INFORMATION</h3>
                     <div>
-                        <span>First_name<label>*</label></span>
-                        <input id="sign_up_first" type="text">
+                        <span>First Name<label>*</label></span>
+                        <input id="sign_up_first" type="text" maxlength="255">
                     </div>
                     <div>
-                        <span>Last_name<label>*</label></span>
-                        <input id="sign_up_last" type="text">
+                        <span>Last Name<label>*</label></span>
+                        <input id="sign_up_last" type="text" maxlength="255">
                     </div>
                     <div>
                         <span>Email Address<label>*</label></span>
-                        <input id="sign_up_email" type="text">
+                        <input id="sign_up_email" type="text" maxlength="254">
                     </div>
                     <div>
                         <span>Username<label>*</label></span>
-                        <input id="sign_up_user" type="text">
+                        <input id="sign_up_user" type="text" maxlength="15">
                     </div>
                     <div>
                         <span>Password<label>*</label></span>
-                        <input id="sign_up_password" type="password">
+                        <input id="sign_up_password" type="password" maxlength="20">
                     </div>
                     <div>
                         <span>Confirm Password<label>*</label></span>
-                        <input id="sign_up_confirm_password" type="password">
+                        <input id="sign_up_confirm_password" type="password" maxlength="20">
                     </div>
                     <div class="clearfix"></div>
                 </div>
