--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
         </div>
         <div class="header_right">
             <ul class="header_user_info">
-                <a class="login" href="login">
+                <a class="login" href="/login">
                     <li class="user_desc"><span class="m_1">Already user ? </span>Login</li>
                     <i class="user"> </i>
                     <div class="clearfix"></div>
@@ -53,7 +53,7 @@
                 <h3>NEW CUSTOMERS</h3>
                 <p>By creating an account with our store, you will be able to move through the checkout process faster,
                    store multiple shipping addresses, view and track your orders in your account and more.</p>
-                <a class="acount-btn" href="register">Create an Account</a>
+                <a class="acount-btn" href="/register">Create an Account</a>
             </div>
             <div class="col-md-6 login-right">
                 <h3>REGISTERED CUSTOMERS</h3>
