--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,10 +15,10 @@
 <div class="header">
     <div class='container'>
         <div class="header_left">
-            <img src="images/rate.png" alt=""/>
+            <img src="assets/images/rate.png" alt=""/>
         </div>
         <div class="logo">
-            <a href="/"><img src="images/logo.png" alt=""/>
+            <a href="/"><img src="assets/images/logo.png" alt=""/>
                 <span>Matcha</span>
             </a>
         </div>
@@ -105,6 +105,7 @@
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
 <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
 <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
+<script src="/node_modules/js-cookie/src/js.cookie.js" language="JavaScript"></script>
 <script src="/assets/js/register.js" language="JavaScript"></script>
 </body>
 </html>
