regex checkName changed
length LastFirst changed to 40 in initDB/ CheckValidity / register.js

old img folder deleted

redirection after you register and swal for the email confirmation

route 404 reactiver

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -148,8 +148,10 @@
     </div>
 </div>
 
+
 <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/assets/js/jquery.easydropdown.js" language="JavaScript"></script>
+<script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
 <script defer src="/node_modules/flexslider/jquery.flexslider-min.js" language="JavaScript"></script>
 <script src="/node_modules/wowjs/dist/wow.min.js" language="JavaScript"></script>
 <script src="/assets/js/index.js" language="JavaScript"></script>
