--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -19,17 +19,23 @@
                 <span>Matcha</span>
             </a>
         </div>
-        <div class="header_right">
-            <ul class="header_user_info">
-                <a class="login" href="login">
-                    <li class="user_desc"><span class="m_1">Already user ? </span>Login</li>
-                    <i class="user"> </i>
+        <%if (locals.connected == false){%>
+            <div class="header_right">
+                <ul class="header_user_info">
+                    <a class="login" href="login">
+                        <li class="user_desc"><span class="m_1">Already user ? </span>Login</li>
+                        <i class="user"> </i>
+                        <div class="clearfix"></div>
+                    </a>
                     <div class="clearfix"></div>
-                </a>
-                <div class="clearfix"></div>
-            </ul>
-            <a href="register" class="btn1 btn-1 btn1-1b">Sign Up</a>
-        </div>
+                </ul>
+                <a href="register" class="btn1 btn-1 btn1-1b">Sign Up</a>
+            </div>
+        <%}else{%>
+            <div class="header_right">
+                <a href="logout" class="btn1 btn-1 btn1-1b">Logout</a>
+            </div>
+        <%}%>
         <div class="clearfix"></div>
     </div>
 </div>
