--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -35,6 +35,14 @@
             </div>
         <%}else{%>
             <div class="header_right">
+                <ul class="header_user_info">
+                    <a class="login" href="profil">
+                        <li class="user_desc">Manage your account</li>
+                        <i class="user"> </i>
+                        <div class="clearfix"></div>
+                    </a>
+                    <div class="clearfix"></div>
+                </ul>
                 <a href="logout" class="btn1 btn-1 btn1-1b">Logout</a>
             </div>
         <%}%>
