--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -112,7 +112,9 @@
 
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label><h4>Sex</h4></label>
+                            <label>
+                                <h4>Sex</h4>
+                            </label>
                         </div>
                     </div>
 
@@ -187,7 +189,8 @@
 
                             <div class="col-xs-6">
                                 <label for="sex-orient"><h4>Sexual orientation</h4></label>
-                                <select class="dropdown" tabindex="10" data-settings='{"wrapperClass":"metro1"}'>
+                                <select id="orientation" class="dropdown" tabindex="10"
+                                        data-settings='{"wrapperClass":"metro1"}'>
                                     <option value="">Select</option>
                                     <option value="O">Heterosexual</option>
                                     <option value="F">Homosexual</option>
@@ -200,7 +203,8 @@
 
                             <div class="col-xs-6">
                                 <label for="sex"><h4>Sex</h4></label>
-                                <select class="dropdown" tabindex="10" data-settings='{"wrapperClass":"metro1"}'>
+                                <select id="sex" class="dropdown" tabindex="10"
+                                        data-settings='{"wrapperClass":"metro1"}'>
                                     <option value="">Select</option>
                                     <option value="O">Other</option>
                                     <option value="F">Female</option>
@@ -210,15 +214,15 @@
                         </div>
 
 
+
                         <div class="form-group">
+
                             <div class="col-xs-6">
-                                <label for="age"><h4>Age</h4></label>
-                                <input type="number" min="18" max="100" class="form-control" name="age" id="age"
-                                       placeholder="<%= locals.age %>"
-                                       title="Enter your age.">
+                                <label for="bio"><h4>Bio</h4></label>
+                                <input type="text" class="form-control" id="bio" placeholder="<%= locals.bio %>"
+                                       title="Enter your bio">
                             </div>
                         </div>
-
 
                         <div class="form-group">
 
@@ -231,19 +235,26 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="location"><h4>Location</h4></label>
-                                <input type="text" class="form-control" id="location" placeholder="somewhere"
-                                       title="Enter your location">
+                                <label for="distance"><h4 id="distanceText">Distance <%= locals.distance %> (Km)</h4>
+                                </label>
+                                <input type="range" class="form-control" id="Distance" value="<%= locals.distance %>"
+                                       min="1" max="250"
+                                       title="Enter your distance search area"
+                                       onchange="updateTextDistance(this.value);">
                             </div>
                         </div>
-                        <div class="form-group">
 
+
+                        <div class="form-group">
                             <div class="col-xs-6">
-                                <label for="bio"><h4>Bio</h4></label>
-                                <input type="text" class="form-control" id="bio" placeholder="<%= locals.bio %>"
-                                       title="Enter your bio">
+                                <label for="age"><h4 id="ageText">Age</h4></label>
+                                <input type="range" min="18" max="100" class="form-control" name="age" id="age"
+                                       value="<%= locals.age %>" title="Enter your age."
+                                       onchange="updateTextAge(this.value);">
                             </div>
                         </div>
+
+
                         <div class="form-group">
 
                             <div class="col-xs-6">
