--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -138,7 +138,7 @@
 
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label><h4>tags</h4></label>
+                            <label><h4>Tags</h4></label>
                         </div>
                     </div>
                     <hr>
@@ -192,9 +192,9 @@
                                 <select id="orientation" class="dropdown" tabindex="10"
                                         data-settings='{"wrapperClass":"metro1"}'>
                                     <option value="">Select</option>
-                                    <option value="O">Heterosexual</option>
-                                    <option value="F">Homosexual</option>
-                                    <option value="M">Bisexual</option>
+                                    <option value="He">Heterosexual</option>
+                                    <option value="Ho">Homosexual</option>
+                                    <option value="Bi">Bisexual</option>
                                 </select>
                             </div>
                         </div>
@@ -237,8 +237,8 @@
                             <div class="col-xs-6">
                                 <label for="distance"><h4 id="distanceText">Distance <%= locals.distance %> (Km)</h4>
                                 </label>
-                                <input type="range" class="form-control" id="Distance" value="<%= locals.distance %>"
-                                       min="1" max="250"
+                                <input type="range" class="form-control" id="distance" value="<%= locals.distance %>"
+                                       min="5" max="50" step="5"
                                        title="Enter your distance search area"
                                        onchange="updateTextDistance(this.value);">
                             </div>
@@ -308,6 +308,7 @@
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
 <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/node_modules/js-cookie/src/js.cookie.js" language="JavaScript"></script>
+<script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
 <script src="/assets/js/jquery.easydropdown.js" language="JavaScript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" language="JavaScript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" language="JavaScript"></script>
