--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -154,7 +154,7 @@
                             <div class="col-xs-6">
                                 <label for="first_name"><h4>First name</h4></label>
                                 <input type="text" class="form-control" name="first_name" id="first_name"
-                                       placeholder="<%= locals.first_name %>" title="enter your first name">
+                                       placeholder="<%= locals.first_name %>" title="Enter your first name">
                             </div>
                         </div>
                         <div class="form-group">
@@ -258,7 +258,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="password"><h4>Password</h4></label>
+                                <label for="password"><h4>Password *</h4></label>
                                 <input type="password" class="form-control" name="password" id="password"
                                        placeholder="******" title="Enter your password." required>
                             </div>
@@ -266,7 +266,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="password2"><h4>Verify</h4></label>
+                                <label for="password2"><h4>Verify *</h4></label>
                                 <input type="password" class="form-control" name="password2" id="password2"
                                        placeholder="******" title="Confirm your password." required>
                             </div>
